--- a/index.html
+++ b/index.html
@@ -1,13 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <meta name="description" content="Welcome to Grand Gym, your ultimate destination for fitness and wellness.">
+    <title>Grand Gym</title>
 
+    <!--Favicon Generated using Favicon.io-->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <!--Bootstrap CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <!--Custom CSS-->
+    <link rel="stylesheet" href="assets/css/styles.css">
+</head>
+
+<body class="d-flex flex-column min-vh-100">
+    <div id="logo">
+        <h1 class="text-center">Grand Gym</h1>
+        <a id="contact-logo" class="centered btn btn-outline-warning btn-lg" href="booking-form.html">Contact us!</a>
+    </div>
+
+    <!-- Navigation -->
+    <nav id="navbar" class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="services.html">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="booking-form.html">Membership</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <main>
+        <div id="show_bg_2">
+            <a class="centered-image btn btn-outline-warning btn-lg" href="booking-form.html">Contact us!</a>
+        </div>
+        <span>
+        <div style="width: 50%; margin: 5px;">
+            <a href="services.html" target="_blank">
+            <img src="assets/images/samuel-girven-fqMu99l8sqo-unsplash.jpg" class="card-img-top" alt="...">
+            </a>
+        </div>
+        
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Day</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>                   
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">Monday</th>
+                    <td>Mark</td>
+                    <td>Otto</td>                   
+                </tr>
+                <tr>
+                    <th scope="row">Tuesday-Thursday</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>              
+                </tr>
+                <tr>
+                    <th scope="row">Friday</th>
+                    <td>John</td>
+                    <td>Doe</td>                   
+                </tr>
+                <tr>
+                    <th scope="row">Saturday</th>
+                    <td>Jane</td>
+                    <td>Smith</td>
+            </tbody>
+        </table>
+        <div id="intro"></div>
+    </main>
+    <!--Bootstrap JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
+    </script>
     <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/51e5a05c55.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
