adjust opening times table

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true"> </a>
+                        <a class="nav-link" href="booking-form.html">Membership</a>
                     </li>
                 </ul>
             </div>
@@ -85,35 +85,35 @@
                         <tbody>
                             <tr>
                                 <th scope="row">Monday</th>
-                                <td>Tuesdays</td>
-                                <td>8pm - 11pm</td>
+                                <td></td>
+                                <td></td>
 
                             </tr>
                             <tr>
                                 <th scope="row">Tuesday</th>
-                                <td>Thursdays</td>
-                                <td>8pm - 11pm</td>
+                                <td></td>
+                                <td></td>
 
                             </tr>
                             <tr>
                                 <th scope="row">Wedneday</th>
-                                <td>Last Sunday of the month</td>
-                                <td>12pm - 7pm</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th scope="row">Thursday</th>
-                                <td>Tuesdays</td>
-                                <td>8pm - 11pm</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th scope="row">Friday</th>
-                                <td>Tuesdays</td>
-                                <td>8pm - 11pm</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th scope="row">Saturday-Sunday</th>
-                                <td>Tuesdays</td>
-                                <td>8pm - 11pm</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                         </tbody>
                     </table>
