Centered the opening times table, adjusted the elements on navbar and fixed some issues on mobile/tablet view

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body class="d-flex flex-column min-vh-100">
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: rgb(173, 255, 47);">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="assets/images/Logo.png" alt="logo">
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="services.html">Services</a>
@@ -50,7 +50,7 @@
     <!-- Main Content -->
     <main>
 
-        <div class="col-12"></div>
+        <div class="col-12">
         <div id="show_bg_2">
             <a class="centered-image btn btn-lg" href="booking-form.html">Contact us!</a>
         </div>
@@ -70,10 +70,11 @@
         <section id="opening-times" class="continer section">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="display-6 text-center">Opening Times</h2>
+                    <h2 class="display-6 text-center" style="font-size:6vw;">Opening Times</h2>
                 </div>
-                <div class="col-12 col-xl-6">
-                    <table class="table table-ls table-hover table-dark">
+                <div class="row justify-content-center">
+                <div class="col-12 col-xl-6 d-flex justify-content-center">
+                    <table class="table table-responsive table-ls table-hover table-dark " style="width:600px;">
                         <thead>
                             <tr>
                                 <th scope="col">Day</th>
@@ -85,38 +86,39 @@
                         <tbody>
                             <tr>
                                 <th scope="row">Monday</th>
-                                <td></td>
-                                <td></td>
+                                <td>8am</td> 
+                                <td>11pm</td> 
 
                             </tr>
                             <tr>
                                 <th scope="row">Tuesday</th>
-                                <td></td>
-                                <td></td>
+                                <td>8am</td>
+                                <td>11pm</td>
 
                             </tr>
                             <tr>
                                 <th scope="row">Wedneday</th>
-                                <td></td>
-                                <td></td>
+                                <td>8am</td>
+                                <td>11pm</td>
                             </tr>
                             <tr>
                                 <th scope="row">Thursday</th>
-                                <td></td>
-                                <td></td>
+                                <td>8am</td>
+                                <td>11pm</td>
                             </tr>
                             <tr>
                                 <th scope="row">Friday</th>
-                                <td></td>
-                                <td></td>
+                                <td>12am</td>
+                                <td>10pm</td>
                             </tr>
                             <tr>
                                 <th scope="row">Saturday-Sunday</th>
-                                <td></td>
-                                <td></td>
+                                <td>6am</td>
+                                <td>12am</td>
                             </tr>
                         </tbody>
                     </table>
+                    </div>
         </section>
 
 
