--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to Grand Gym, your ultimate destination for fitness and wellness.">
-    <title>Services - Grand Gym</title>
+    <title>Grand Gym</title>
 
     <!--Favicon Generated using Favicon.io-->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
@@ -17,41 +17,176 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
- <body class="d-flex flex-column min-vh-100">  
-        <!-- Navigation -->
-        <nav id="navbar" class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+<body class="d-flex flex-column min-vh-100">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="assets/images/Logo.png" alt="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="services.html">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="booking-form.html">Membership</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <!-- Main Content -->
+    <main>
+
+        <div class="col-12">
+        <div id="show_bg_2">
+            <a class="centered-image btn btn-lg" href="booking-form.html">Contact us!</a>
+        </div>
+        </div>
+        
+        <div class="gym-img">
+            <div class="image">
+                <div id="servicesgym"></div>
+                <a id="underline" href="services.html">
+                <div class="content">
+                    
+                    <h1>Services</h1>
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link "href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="services.html">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="gallery.html">Gallery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="booking-form.html">Membership</a>
-                        </li>
-                    </ul>  
+                </div>
+        </div>
+        </div>
+        <section id="opening-times" class="continer section">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="display-6 text-center" style="font-size:6vw;">Opening Times</h2>
+                </div>
+                <div class="row justify-content-center">
+                <div class="col-12 col-xl-6 d-flex justify-content-center">
+                    <table class="table table-responsive table-ls table-hover table-dark " style="width:600px;">
+                        <thead>
+                            <tr>
+                                <th scope="col">Day</th>
+                                <th scope="col">Open</th>
+                                <th scope="col">Closed</th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Monday</th>
+                                <td>8am</td> 
+                                <td>11pm</td> 
+
+                            </tr>
+                            <tr>
+                                <th scope="row">Tuesday</th>
+                                <td>8am</td>
+                                <td>11pm</td>
+
+                            </tr>
+                            <tr>
+                                <th scope="row">Wedneday</th>
+                                <td>8am</td>
+                                <td>11pm</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Thursday</th>
+                                <td>8am</td>
+                                <td>11pm</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Friday</th>
+                                <td>12am</td>
+                                <td>10pm</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Saturday-Sunday</th>
+                                <td>6am</td>
+                                <td>12am</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    </div>
+        </section>
+
+
+
+
+        <footer class="mt-auto">
+            <div class="container section">
+                <div class="row justify-content-center">
+                    <div class="col-12 text-center">
+                        <h2 class="display-6">Contact us!</h2>
+                    </div>
+                    <!-- Contact info -->
+                    <div class="col-12 col-md-6 col-xl-4">
+                        <h3 class="sub-heading-color">Contact info</h3>
+                        <address>
+                            <strong><i class="fa-solid fa-location-dot"></i> Grand Gym</strong><br>
+                            <br>
+
+                        </address>
+                        <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
+                            <i class="fa-regular fa-paper-plane"></i>
+                        </p>
+                        <div class="social-links my-4">
+                            <a href="https://www.instagram.com" target="_blank"
+                                aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
+                                    class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.facebook.com" target="_blank"
+                                aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
+                                    class="fa-brands fa-square-facebook"></i></a>
+                            <a href="https://www.x.com" target="_blank"
+                                aria-label="Visit our X feed (opens in a new tab)" rel="noopener"><i
+                                    class="fa-brands fa-x-twitter"></i></a>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
-        </nav>
+        </footer>
+    </main>
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
     </script>
     <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/51e5a05c55.js" crossorigin="anonymous"></script>
+
+
+    <script>
+        document
+            .querySelectorAll(".navbar-collapse .nav-link")
+            .forEach((link) => {
+                link.addEventListener("click", function (e) {
+                    let section = document.querySelector(e.target.getAttribute("href"));
+                    if (section) {
+                        e.preventDefault(); // Prevent default anchor click behavior
+                        let navbarHeight = document.querySelector(".navbar-toggler").offsetHeight;
+                        window.scroll({
+                            top: section.offsetTop - navbarHeight, // Adjust for navbar height
+                            behavior: "smooth",
+                        });
+                        document
+                            .querySelector(".navbar-collapse")
+                            .classList.remove("show"); // Collapse navbar
+                    }
+                });
+            });
+    </script>
 </body>
 
 </html>
