--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
     <main>
 
         <div class="col-12">
-        <div id="show_bg_2">
-            <a class="centered-image btn btn-lg" href="booking-form.html">Contact us!</a>
+            <div id="show_bg_2">
+                <a class="centered-image btn btn-lg" href="booking-form.html">Contact us!</a>
+            </div>
         </div>
-        </div>
-        
+
         <div class="gym-img">
             <div class="image">
                 <div id="servicesgym"></div>
                 <a id="underline" href="services.html">
-                <div class="content">
-                    
-                    <h1>Services</h1>
+                    <div class="content">
+
+                        <h1>Services</h1>
                 </a>
-                </div>
+            </div>
         </div>
         </div>
         <section id="opening-times" class="continer section">
@@ -73,51 +73,51 @@
                     <h2 class="display-6 text-center" style="font-size:6vw;">Opening Times</h2>
                 </div>
                 <div class="row justify-content-center">
-                <div class="col-12 col-xl-6 d-flex justify-content-center">
-                    <table class="table table-responsive table-ls table-hover table-dark " style="width:600px;">
-                        <thead>
-                            <tr>
-                                <th scope="col">Day</th>
-                                <th scope="col">Open</th>
-                                <th scope="col">Closed</th>
+                    <div class="col-12 col-xl-6 d-flex justify-content-center">
+                        <table class="table table-responsive table-ls table-hover table-dark " style="width:600px;">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Day</th>
+                                    <th scope="col">Open</th>
+                                    <th scope="col">Closed</th>
 
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">Monday</th>
-                                <td>8am</td> 
-                                <td>11pm</td> 
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Monday</th>
+                                    <td>8am</td>
+                                    <td>11pm</td>
 
-                            </tr>
-                            <tr>
-                                <th scope="row">Tuesday</th>
-                                <td>8am</td>
-                                <td>11pm</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Tuesday</th>
+                                    <td>8am</td>
+                                    <td>11pm</td>
 
-                            </tr>
-                            <tr>
-                                <th scope="row">Wedneday</th>
-                                <td>8am</td>
-                                <td>11pm</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Thursday</th>
-                                <td>8am</td>
-                                <td>11pm</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Friday</th>
-                                <td>12am</td>
-                                <td>10pm</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Saturday-Sunday</th>
-                                <td>6am</td>
-                                <td>12am</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Wedneday</th>
+                                    <td>8am</td>
+                                    <td>11pm</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Thursday</th>
+                                    <td>8am</td>
+                                    <td>11pm</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Friday</th>
+                                    <td>12am</td>
+                                    <td>10pm</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Saturday-Sunday</th>
+                                    <td>6am</td>
+                                    <td>12am</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
         </section>
 
@@ -141,16 +141,22 @@
                         <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
                             <i class="fa-regular fa-paper-plane"></i>
                         </p>
-                        <div class="social-links my-4">
-                            <a href="https://www.instagram.com" target="_blank"
-                                aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
-                                    class="fa-brands fa-instagram"></i></a>
+                        <div id="social-links" class="social-links my-4">
+                            <li><a href="https://www.instagram.com" target="_blank"
+                                    aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
+                                        class="fa-brands fa-instagram"></i></a></li>
                             <a href="https://www.facebook.com" target="_blank"
                                 aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
                                     class="fa-brands fa-square-facebook"></i></a>
                             <a href="https://www.x.com" target="_blank"
                                 aria-label="Visit our X feed (opens in a new tab)" rel="noopener"><i
                                     class="fa-brands fa-x-twitter"></i></a>
+                            <a href="https://www.snapchat.com" target="_blank"
+                                aria-label="Visit our Snapchat feed (opens in a new tab)" rel="noopener"><i
+                                    class="fa-brands fa-snapchat"></i></a>
+                            <a href="https://bsky.app/" target="_blank"
+                                aria-label="Visit our Bluesky feed (opens in a new tab)" rel="noopener"><i
+                                    class="fa-brands fa-bluesky"></i></a>
                         </div>
                     </div>
 
