--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section id="opening-times" class="continer section">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="display-6 text-center" style="font-size:6vw;">Opening Times</h2>
+                    <h2 id="tabletime" class="display-6 text-center" style="font-size:6vw;">Opening Times</h2>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-12 col-xl-6 d-flex justify-content-center">
@@ -121,14 +121,14 @@
                     </div>
         </section>
 
-
+        </main>
 
 
         <footer class="mt-auto">
             <div class="container section">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
-                        <h2 class="display-6">Contact us!</h2>
+                        <h2 id="contactinf" class="display-6">Contact us!</h2>
                     </div>
                     <!-- Contact info -->
                     <div class="col-12 col-md-6 col-xl-4">
@@ -164,7 +164,7 @@
                 </div>
             </div>
         </footer>
-    </main>
+    
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
