styled the contact button and added text on top of the main image

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 
         <div class="col-12">
             <div id="show_bg_2">
-                <a class="centered-image btn btn-lg" href="booking-form.html">Contact us!</a>
+                <h3 id="bg-text" class="text-center">Smash your goals with cutting-edge kit on a spacious gym floor - built to move with you. Dive into our
+                heated indoor pool for some serious lengths or kick back in our spa facilities. Jump into one of many
+                epic fitness classes every week - from high-energy sweat sessions to holistic resets, we've got your
+                fitness covered.</h3>
+                <a id="contact-btn" class="centered-image btn btn-lg" href="booking-form.html">Contact us!</a>
             </div>
         </div>
 
@@ -121,50 +125,49 @@
                     </div>
         </section>
 
-        </main>
+    </main>
 
 
-        <footer class="mt-auto">
-            <div class="container section">
-                <div class="row justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 id="contactinf" class="display-6">Contact us!</h2>
-                    </div>
-                    <!-- Contact info -->
-                    <div class="col-12 col-md-6 col-xl-4">
-                        <h3 class="sub-heading-color">Contact info</h3>
-                        <address>
-                            <strong><i class="fa-solid fa-location-dot"></i> Grand Gym</strong><br>
-                            <br>
-
-                        </address>
-                        <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
-                            <i class="fa-regular fa-paper-plane"></i>
-                        </p>
-                        <div id="social-links" class="social-links my-4">
-                            <li><a href="https://www.instagram.com" target="_blank"
-                                    aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
-                                        class="fa-brands fa-instagram"></i></a></li>
-                            <a href="https://www.facebook.com" target="_blank"
-                                aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
-                                    class="fa-brands fa-square-facebook"></i></a>
-                            <a href="https://www.x.com" target="_blank"
-                                aria-label="Visit our X feed (opens in a new tab)" rel="noopener"><i
-                                    class="fa-brands fa-x-twitter"></i></a>
-                            <a href="https://www.snapchat.com" target="_blank"
-                                aria-label="Visit our Snapchat feed (opens in a new tab)" rel="noopener"><i
-                                    class="fa-brands fa-snapchat"></i></a>
-                            <a href="https://bsky.app/" target="_blank"
-                                aria-label="Visit our Bluesky feed (opens in a new tab)" rel="noopener"><i
-                                    class="fa-brands fa-bluesky"></i></a>
-                        </div>
-                    </div>
-
-
+    <footer class="mt-auto">
+        <div class="container section">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center">
+                    <h2 id="contactinf" class="display-6">Contact us!</h2>
                 </div>
+                <!-- Contact info -->
+                <div class="col-12 col-md-6 col-xl-4">
+                    <h3 class="sub-heading-color">Contact info</h3>
+                    <address>
+                        <strong><i class="fa-solid fa-location-dot"></i> Grand Gym</strong><br>
+                        <br>
+
+                    </address>
+                    <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
+                        <i class="fa-regular fa-paper-plane"></i>
+                    </p>
+                    <div id="social-links" class="social-links my-4">
+                        <li><a href="https://www.instagram.com" target="_blank"
+                                aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
+                                    class="fa-brands fa-instagram"></i></a></li>
+                        <a href="https://www.facebook.com" target="_blank"
+                            aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-square-facebook"></i></a>
+                        <a href="https://www.x.com" target="_blank" aria-label="Visit our X feed (opens in a new tab)"
+                            rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="https://www.snapchat.com" target="_blank"
+                            aria-label="Visit our Snapchat feed (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-snapchat"></i></a>
+                        <a href="https://bsky.app/" target="_blank"
+                            aria-label="Visit our Bluesky feed (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-bluesky"></i></a>
+                    </div>
+                </div>
+
+
             </div>
-        </footer>
-    
+        </div>
+    </footer>
+
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
