added responsive gallery of images that zooms in on hover

--- a/services.html
+++ b/services.html
@@ -200,11 +200,11 @@
                 </div>
         </section>
     </main>
-    <footer class="mt-auto">
+   <footer class="mt-auto">
         <div class="container section">
             <div class="row justify-content-center">
                 <div class="col-12 text-center">
-                    <h2 class="display-6">Contact us!</h2>
+                    <h2 id="contactinf" class="display-6">Contact us!</h2>
                 </div>
                 <!-- Contact info -->
                 <div class="col-12 col-md-6 col-xl-4">
@@ -217,16 +217,21 @@
                     <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
                         <i class="fa-regular fa-paper-plane"></i>
                     </p>
-                    <!-- Social Links-->
-                    <div class="social-links my-4">
-                        <a href="https://www.instagram.com" target="_blank"
-                            aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
-                                class="fa-brands fa-instagram"></i></a>
+                    <div id="social-links" class="social-links my-4">
+                        <li><a href="https://www.instagram.com" target="_blank"
+                                aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
+                                    class="fa-brands fa-instagram"></i></a></li>
                         <a href="https://www.facebook.com" target="_blank"
                             aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
                                 class="fa-brands fa-square-facebook"></i></a>
                         <a href="https://www.x.com" target="_blank" aria-label="Visit our X feed (opens in a new tab)"
                             rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="https://www.snapchat.com" target="_blank"
+                            aria-label="Visit our Snapchat feed (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-snapchat"></i></a>
+                        <a href="https://bsky.app/" target="_blank"
+                            aria-label="Visit our Bluesky feed (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-bluesky"></i></a>
                     </div>
                 </div>
 
