--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="assets/images/Logo.png" alt="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -65,7 +65,6 @@
                 <div id="servicesgym"></div>
                 <a id="underline" href="services.html">
                     <div class="content">
-
                         <h1>Services</h1>
                 </a>
             </div>
@@ -74,7 +73,7 @@
         <section id="opening-times" class="continer section">
             <div class="row">
                 <div class="col-12">
-                    <h2 id="tabletime" class="display-6 text-center" style="font-size:6vw;">Opening Times</h2>
+                    <h2 id="tabletime" class="display-6 text-center">Opening Times</h2>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-12 col-xl-6 d-flex justify-content-center">
@@ -138,12 +137,12 @@
                 <div class="col-12 col-md-6 col-xl-4">
                     <h3 class="sub-heading-color">Contact info</h3>
                     <address>
-                        <strong><i class="fa-solid fa-location-dot"></i> Grand Gym</strong><br>
+                        <strong><i class="fa-solid fa-location-dot"></i> 50 Bishop St,<br> Coventry CV1 1HW</strong>
                         <br>
 
                     </address>
                     <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
-                        <i class="fa-regular fa-paper-plane"></i>
+                        <i class="fa-regular fa-paper-plane"></i> Grandgym@gmail.com
                     </p>
                     <div id="social-links" class="social-links my-4">
                         <li><a href="https://www.instagram.com" target="_blank"
