added google maps and text on footer for other pages

--- a/booking-form.html
+++ b/booking-form.html
@@ -66,10 +66,22 @@
                     
                 </div>
                 <button type="submit" id="btn-submit" class="btn btn-primary">Submit</button>
-            </form>
-            
+            </form>       
         </section>
-
+            <section class="col-12 col-md-6 col-xl-6 my-4">
+                <h3 id="location" class="mb-3 text-center">Find Us Here</h3>
+                <div id="maps" class="ratio ratio-16x9">
+                    <iframe
+                        src="https://www.google.com/maps?q=50+Bishop+St,+Coventry+CV1+1HW&output=embed"
+                        width="600"
+                        height="450"
+                        style="border:0;"
+                        allowfullscreen=""
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"
+                        title="Grand Gym Location"></iframe>
+                </div>
+            </section>
     </main>
     <footer class="mt-auto">
         <div class="container section">
@@ -81,12 +93,12 @@
                 <div class="col-12 col-md-6 col-xl-4">
                     <h3 class="sub-heading-color">Contact info</h3>
                     <address>
-                        <strong><i class="fa-solid fa-location-dot"></i> Grand Gym</strong><br>
+                        <strong><i class="fa-solid fa-location-dot"></i> 50 Bishop St,<br> Coventry CV1 1HW</strong>
                         <br>
 
                     </address>
                     <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
-                        <i class="fa-regular fa-paper-plane"></i>
+                        <i class="fa-regular fa-paper-plane"></i> Grandgym@gmail.com
                     </p>
                     <div id="social-links" class="social-links my-4">
                         <li><a href="https://www.instagram.com" target="_blank"
@@ -105,8 +117,6 @@
                                 class="fa-brands fa-bluesky"></i></a>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </footer>
