--- a/services.html
+++ b/services.html
@@ -154,16 +154,16 @@
                                 week alongside a
                                 balanced, healthy diet and lifestyle is one of the best ways to stay fit and healthy and
                                 maintain a positive mental outlook. Do it with friends, and it’s even more fun!</li><br>
-                            <li><strong>De-stresses and relaxes</strong>Whether it’s work stressing you out, the kids
+                            <li><strong>De-stresses and relaxes</strong> Whether it’s work stressing you out, the kids
                                 being a nightmare, or just life in general, we all get times we just want to SCREAM.
                                 Well, help is at hand. Swimming regularly can lower stress levels, reduce anxiety and
                                 depression, and improve your sleep patterns. Feeling the mental benefits of swimming
                                 takes just a light swim. No lane pounding needed.</li><br>
-                            <li><strong>Burns those calories</strong>Swimming is one of the most effective ways to burn
+                            <li><strong>Burns those calories</strong> Swimming is one of the most effective ways to burn
                                 calories. A gentle swim can burn over 200 calories in just half an hour, more than
                                 double that of walking. And a faster swim would see that chocolate bar gone quicker than
                                 if you went running or cycling.</li><br>
-                            <li><strong>Increases your energy levels</strong>Inactivity and not ageing is often
+                            <li><strong>Increases your energy levels</strong> Inactivity and not ageing is often
                                 responsible for people’s lack of energy. Just 30 minutes of swimming three times per
                                 week can boost your energy levels through increased metabolic rate.</li>
                         </ul>
@@ -210,12 +210,12 @@
                 <div class="col-12 col-md-6 col-xl-4">
                     <h3 class="sub-heading-color">Contact info</h3>
                     <address>
-                        <strong><i class="fa-solid fa-location-dot"></i> Grand Gym</strong><br>
+                        <strong><i class="fa-solid fa-location-dot"></i> 50 Bishop St,<br> Coventry CV1 1HW</strong>
                         <br>
 
                     </address>
                     <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
-                        <i class="fa-regular fa-paper-plane"></i>
+                        <i class="fa-regular fa-paper-plane"></i> Grandgym@gmail.com
                     </p>
                     <div id="social-links" class="social-links my-4">
                         <li><a href="https://www.instagram.com" target="_blank"
