--- a/gallery.html
+++ b/gallery.html
@@ -86,12 +86,12 @@
                 <div class="col-12 col-md-6 col-xl-4">
                     <h3 class="sub-heading-color">Contact info</h3>
                     <address>
-                        <strong><i class="fa-solid fa-location-dot"></i> Grand Gym</strong><br>
+                        <strong><i class="fa-solid fa-location-dot"></i> 50 Bishop St,<br> Coventry CV1 1HW</strong>
                         <br>
 
                     </address>
                     <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
-                        <i class="fa-regular fa-paper-plane"></i>
+                        <i class="fa-regular fa-paper-plane"></i> Grandgym@gmail.com
                     </p>
                     <div id="social-links" class="social-links my-4">
                         <li><a href="https://www.instagram.com" target="_blank"
